# etl_snowflake_lineage_purview

./: PURVIEW_LINEAGE_OBJECT_DEPENDENCIES.sql  README.md  delete.py  main.py  pyproject.toml  settings.py  snowflake_dependencies.py
models/: exceptions.py  snowflake_dependencies.py
