[tool.poetry]
name = "etl-snowflake-lineage-purview"
version = "0.1.0"
description = "Extract Snowflake dependencies via a Snowflake view, transform view lines to Apache Atlas Objects Process and load Atlas Process to Purview Atlas API via bulk create request."
authors = ["Mathis Fasolo <mathis.fasolo@soyhuce.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pyapacheatlas = "^0.16.0"
snowflake-connector-python = {extras = ["pandas"], version = "^3.12.0"}
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
pandera = "^0.20.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
